src/antlr/grammars/HTMLWithCSSParser.java
// Generated from C:/Users/Asus/ANTLR/CompilerPractice/src/grammars/HTMLWithCSSParser.g4 by ANTLR 4.13.2
package antlr.grammars;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class HTMLWithCSSParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		JINJA_BLOCK_OPEN=1, JINJA_EXPR_OPEN=2, JINJA_COMMENT_OPEN=3, JINJA_RAW_OPEN=4, 
		JINJA_ENDRAW=5, TAG_OPEN=6, SCRIPT_OPEN=7, STYLE_OPEN=8, HTML_COMMENT=9, 
		HTML_CONDITIONAL_COMMENT=10, XML=11, CDATA=12, DTD=13, SCRIPTLET=14, SEA_WS=15, 
		HTML_TEXT=16, TAG_CLOSE=17, TAG_SLASH_CLOSE=18, TAG_SLASH=19, TAG_EQUALS=20, 
		TAG_NAME=21, TAG_WHITESPACE=22, ATTVALUE_VALUE=23, ATTRIBUTE=24, SCRIPT_BODY=25, 
		SCRIPT_SHORT_BODY=26, STYLE_CLOSE=27, CHARSET=28, IMPORT=29, KEYFRAMES=30, 
		MEDIA=31, PAGE=32, MARGIN_AREA=33, VIEWPORT=34, FONTFACE=35, ATKEYWORD=36, 
		CLASSKEYWORD=37, STRING=38, UNCLOSED_STRING=39, HASH=40, INDEX=41, NUMBER=42, 
		PERCENTAGE=43, DIMENSION=44, URI=45, UNCLOSED_URI=46, UNIRANGE=47, CDO=48, 
		CDC=49, SEMICOLON=50, COLON=51, COMMA=52, LCURLY=53, RCURLY=54, LPAREN=55, 
		RPAREN=56, LBRACKET=57, RBRACKET=58, EXCLAMATION=59, TILDE=60, MINUS=61, 
		PLUS=62, ASTERISK=63, POUND=64, INCLUDES=65, DASHMATCH=66, STARTSWITH=67, 
		ENDSWITH=68, CONTAINS=69, EQUALS=70, SLASH=71, GREATER=72, FUNCTION=73, 
		IDENT=74, S=75, COMMENT=76, SL_COMMENT=77, IMPORTANT=78, CSS_TEXT=79, 
		JINJA_BLOCK_CLOSE=80, JINJA_BLOCK_CONTENT=81, JINJA_EXPR_CLOSE=82, JINJA_EXPR_CONTENT=83, 
		JINJA_COMMENT_CLOSE=84, JINJA_COMMENT_CONTENT=85, JINJA_RAW_END=86, JINJA_RAW_CONTENT=87;
	public static final int
		RULE_htmlDocument = 0, RULE_documentItem = 1, RULE_htmlElement = 2, RULE_style = 3, 
		RULE_jinjaExpression = 4, RULE_jinjaBlock = 5, RULE_jinjaComment = 6, 
		RULE_htmlContent = 7, RULE_htmlChardata = 8, RULE_htmlAttribute = 9, RULE_htmlMisc = 10, 
		RULE_stylesheet = 11, RULE_statement = 12, RULE_atstatement = 13, RULE_media = 14, 
		RULE_media_query = 15, RULE_media_term = 16, RULE_media_rule = 17, RULE_keyframe_block = 18, 
		RULE_keyframe_selector = 19, RULE_ruleset = 20, RULE_combined_selector = 21, 
		RULE_combinator = 22, RULE_selector = 23, RULE_selpart = 24, RULE_attribute = 25, 
		RULE_pseudo = 26, RULE_declarations = 27, RULE_declaration = 28, RULE_terms = 29, 
		RULE_term = 30, RULE_funct = 31, RULE_any = 32, RULE_margin_rule = 33;
	private static String[] makeRuleNames() {
		return new String[] {
			"htmlDocument", "documentItem", "htmlElement", "style", "jinjaExpression", 
			"jinjaBlock", "jinjaComment", "htmlContent", "htmlChardata", "htmlAttribute", 
			"htmlMisc", "stylesheet", "statement", "atstatement", "media", "media_query", 
			"media_term", "media_rule", "keyframe_block", "keyframe_selector", "ruleset", 
			"combined_selector", "combinator", "selector", "selpart", "attribute", 
			"pseudo", "declarations", "declaration", "terms", "term", "funct", "any", 
			"margin_rule"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'{%'", "'{{'", "'{#'", "'{% raw %}'", null, "'<'", null, null, 
			null, null, null, null, null, null, null, null, null, "'/>'", null, null, 
			null, null, null, null, null, null, "'</style>'", null, "'@import'", 
			"'@keyframes'", "'@media'", "'@page'", null, "'@viewport'", "'@font-face'", 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"'<!--'", "'<--'", "';'", "':'", "','", "'{'", "'}'", "'('", "')'", "'['", 
			"']'", "'!'", "'~'", "'-'", "'+'", "'*'", "'#'", "'~='", "'|='", "'^='", 
			"'$='", "'*='", null, null, null, null, null, null, null, null, null, 
			null, "'%}'", null, "'}}'", null, "'#}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "JINJA_BLOCK_OPEN", "JINJA_EXPR_OPEN", "JINJA_COMMENT_OPEN", "JINJA_RAW_OPEN", 
			"JINJA_ENDRAW", "TAG_OPEN", "SCRIPT_OPEN", "STYLE_OPEN", "HTML_COMMENT", 
			"HTML_CONDITIONAL_COMMENT", "XML", "CDATA", "DTD", "SCRIPTLET", "SEA_WS", 
			"HTML_TEXT", "TAG_CLOSE", "TAG_SLASH_CLOSE", "TAG_SLASH", "TAG_EQUALS", 
			"TAG_NAME", "TAG_WHITESPACE", "ATTVALUE_VALUE", "ATTRIBUTE", "SCRIPT_BODY", 
			"SCRIPT_SHORT_BODY", "STYLE_CLOSE", "CHARSET", "IMPORT", "KEYFRAMES", 
			"MEDIA", "PAGE", "MARGIN_AREA", "VIEWPORT", "FONTFACE", "ATKEYWORD", 
			"CLASSKEYWORD", "STRING", "UNCLOSED_STRING", "HASH", "INDEX", "NUMBER", 
			"PERCENTAGE", "DIMENSION", "URI", "UNCLOSED_URI", "UNIRANGE", "CDO", 
			"CDC", "SEMICOLON", "COLON", "COMMA", "LCURLY", "RCURLY", "LPAREN", "RPAREN", 
			"LBRACKET", "RBRACKET", "EXCLAMATION", "TILDE", "MINUS", "PLUS", "ASTERISK", 
			"POUND", "INCLUDES", "DASHMATCH", "STARTSWITH", "ENDSWITH", "CONTAINS", 
			"EQUALS", "SLASH", "GREATER", "FUNCTION", "IDENT", "S", "COMMENT", "SL_COMMENT", 
			"IMPORTANT", "CSS_TEXT", "JINJA_BLOCK_CLOSE", "JINJA_BLOCK_CONTENT", 
			"JINJA_EXPR_CLOSE", "JINJA_EXPR_CONTENT", "JINJA_COMMENT_CLOSE", "JINJA_COMMENT_CONTENT", 
			"JINJA_RAW_END", "JINJA_RAW_CONTENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "HTMLWithCSSParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public HTMLWithCSSParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HtmlDocumentContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(HTMLWithCSSParser.EOF, 0); }
		public List<DocumentItemContext> documentItem() {
			return getRuleContexts(DocumentItemContext.class);
		}
		public DocumentItemContext documentItem(int i) {
			return getRuleContext(DocumentItemContext.class,i);
		}
		public HtmlDocumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_htmlDocument; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLWithCSSParserListener ) ((HTMLWithCSSParserListener)listener).enterHtmlDocument(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLWithCSSParserListener ) ((HTMLWithCSSParserListener)listener).exitHtmlDocument(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLWithCSSParserVisitor ) return ((HTMLWithCSSParserVisitor<? extends T>)visitor).visitHtmlDocument(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HtmlDocumentContext htmlDocument() throws RecognitionException {
		HtmlDocumentContext _localctx = new HtmlDocumentContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_htmlDocument);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 61406L) != 0)) {
				{
				{
				setState(68);
				documentItem();
				}
				}
				setState(73);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(74);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DocumentItemContext extends ParserRuleContext {
		public DocumentItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_documentItem; }
	 
		public DocumentItemContext() { }
		public void copyFrom(DocumentItemContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SeaWsItemContext extends DocumentItemContext {
		public TerminalNode SEA_WS() { return getToken(HTMLWithCSSParser.SEA_WS, 0); }
		public SeaWsItemContext(DocumentItemContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLWithCSSParserListener ) ((HTMLWithCSSParserListener)listener).enterSeaWsItem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLWithCSSParserListener ) ((HTMLWithCSSParserListener)listener).exitSeaWsItem(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLWithCSSParserVisitor ) return ((HTMLWithCSSParserVisitor<? extends T>)visitor).visitSeaWsItem(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class JinjaExprItemContext extends DocumentItemContext {
		public JinjaExpressionContext jinjaExpression() {
			return getRuleContext(JinjaExpressionContext.class,0);
		}
		public JinjaExprItemContext(DocumentItemContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLWithCSSParserListener ) ((HTMLWithCSSParserListener)listener).enterJinjaExprItem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLWithCSSParserListener ) ((HTMLWithCSSParserListener)listener).exitJinjaExprItem(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLWithCSSParserVisitor ) return ((HTMLWithCSSParserVisitor<? extends T>)visitor).visitJinjaExprItem(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class JinjaBlockItemContext extends DocumentItemContext {
		public JinjaBlockContext jinjaBlock() {
			return getRuleContext(JinjaBlockContext.class,0);
		}
		public JinjaBlockItemContext(DocumentItemContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLWithCSSParserListener ) ((HTMLWithCSSParserListener)listener).enterJinjaBlockItem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLWithCSSParserListener ) ((HTMLWithCSSParserListener)listener).exitJinjaBlockItem(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLWithCSSParserVisitor ) return ((HTMLWithCSSParserVisitor<? extends T>)visitor).visitJinjaBlockItem(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DtdItemContext extends DocumentItemContext {
		public TerminalNode DTD() { return getToken(HTMLWithCSSParser.DTD, 0); }
		public DtdItemContext(DocumentItemContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLWithCSSParserListener ) ((HTMLWithCSSParserListener)listener).enterDtdItem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLWithCSSParserListener ) ((HTMLWithCSSParserListener)listener).exitDtdItem(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLWithCSSParserVisitor ) return ((HTMLWithCSSParserVisitor<? extends T>)visitor).visitDtdItem(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class HtmlCommentItemContext extends DocumentItemContext {
		public TerminalNode HTML_COMMENT() { return getToken(HTMLWithCSSParser.HTML_COMMENT, 0); }
		public HtmlCommentItemContext(DocumentItemContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLWithCSSParserListener ) ((HTMLWithCSSParserListener)listener).enterHtmlCommentItem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLWithCSSParserListener ) ((HTMLWithCSSParserListener)listener).exitHtmlCommentItem(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLWithCSSParserVisitor ) return ((HTMLWithCSSParserVisitor<? extends T>)visitor).visitHtmlCommentItem(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class JinjaCommfsentItemContext extends DocumentItemContext {
		public JinjaCommentContext jinjaComment() {
			return getRuleContext(JinjaCommentContext.class,0);
		}
		public JinjaCommfsentItemContext(DocumentItemContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLWithCSSParserListener ) ((HTMLWithCSSParserListener)listener).enterJinjaCommfsentItem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLWithCSSParserListener ) ((HTMLWithCSSParserListener)listener).exitJinjaCommfsentItem(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLWithCSSParserVisitor ) return ((HTMLWithCSSParserVisitor<? extends T>)visitor).visitJinjaCommfsentItem(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class HtmlElementItemContext extends DocumentItemContext {
		public HtmlElementContext htmlElement() {
			return getRuleContext(HtmlElementContext.class,0);
		}
		public HtmlElementItemContext(DocumentItemContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLWithCSSParserListener ) ((HTMLWithCSSParserListener)listener).enterHtmlElementItem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLWithCSSParserListener ) ((HTMLWithCSSParserListener)listener).exitHtmlElementItem(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLWithCSSParserVisitor ) return ((HTMLWithCSSParserVisitor<? extends T>)visitor).visitHtmlElementItem(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class XmlItemContext extends DocumentItemContext {
		public TerminalNode XML() { return getToken(HTMLWithCSSParser.XML, 0); }
		public XmlItemContext(DocumentItemContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLWithCSSParserListener ) ((HTMLWithCSSParserListener)listener).enterXmlItem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLWithCSSParserListener ) ((HTMLWithCSSParserListener)listener).exitXmlItem(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLWithCSSParserVisitor ) return ((HTMLWithCSSParserVisitor<? extends T>)visitor).visitXmlItem(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ScriptletItemContext extends DocumentItemContext {
		public TerminalNode SCRIPTLET() { return getToken(HTMLWithCSSParser.SCRIPTLET, 0); }
		public ScriptletItemContext(DocumentItemContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLWithCSSParserListener ) ((HTMLWithCSSParserListener)listener).enterScriptletItem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLWithCSSParserListener ) ((HTMLWithCSSParserListener)listener).exitScriptletItem(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLWithCSSParserVisitor ) return ((HTMLWithCSSParserVisitor<? extends T>)visitor).visitScriptletItem(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ConditionalCommentItemContext extends DocumentItemContext {
		public TerminalNode HTML_CONDITIONAL_COMMENT() { return getToken(HTMLWithCSSParser.HTML_CONDITIONAL_COMMENT, 0); }
		public ConditionalCommentItemContext(DocumentItemContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLWithCSSParserListener ) ((HTMLWithCSSParserListener)listener).enterConditionalCommentItem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLWithCSSParserListener ) ((HTMLWithCSSParserListener)listener).exitConditionalCommentItem(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLWithCSSParserVisitor ) return ((HTMLWithCSSParserVisitor<? extends T>)visitor).visitConditionalCommentItem(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DocumentItemContext documentItem() throws RecognitionException {
		DocumentItemContext _localctx = new DocumentItemContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_documentItem);
		try {
			setState(86);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				_localctx = new SeaWsItemContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(76);
				match(SEA_WS);
				}
				break;
			case 2:
				_localctx = new ScriptletItemContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(77);
				match(SCRIPTLET);
				}
				break;
			case 3:
				_localctx = new XmlItemContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(78);
				match(XML);
				}
				break;
			case 4:
				_localctx = new DtdItemContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(79);
				match(DTD);
				}
				break;
			case 5:
				_localctx = new HtmlCommentItemContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(80);
				match(HTML_COMMENT);
				}
				break;
			case 6:
				_localctx = new ConditionalCommentItemContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(81);
				match(HTML_CONDITIONAL_COMMENT);
				}
				break;
			case 7:
				_localctx = new JinjaExprItemContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(82);
				jinjaExpression();
				}
				break;
			case 8:
				_localctx = new JinjaBlockItemContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(83);
				jinjaBlock();
				}
				break;
			case 9:
				_localctx = new JinjaCommfsentItemContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(84);
				jinjaComment();
				}
				break;
			case 10:
				_localctx = new HtmlElementItemContext(_localctx);
				enterOuterAlt(_localctx, 10);
				{
				setState(85);
				htmlElement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
